app/assets/stylesheets/responsive.scss
/* Bootstrap overrides go here. This is included after bootstrap. */
$navCollapseBackgroundColor: #f7f7f7;
$navCollapseColor: #777;

/* 979px - 980px is where nav-collapse gets triggered */
@media (max-width: 979px) {
  .hidden-with-nav {
    display: inherit !important;
  }
  .visible-with-nav {
    display: none !important;
  }
  .nav-collapse {
    background-color: $navCollapseBackgroundColor;
    position: relative;
    top: 10px;
  }
  .nav-collapse .nav {
    margin: 0;
    border-top: 1px solid #ddd;
    &:empty {
      border-top: 0;
    }
  }
  header .navbar .nav > li > a, .nav-collapse .dropdown-menu a {
    padding: 10px;
    border-radius: 0;
  }
  /* this selector has to override specificity of bootstrap-responsive's
      `header .navbar .nav > li > a` and `!important` as well as target
      only the .nav-collapse links
  */
  header .navbar .nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
    color: $navCollapseColor !important;
    &:hover {
      color: $navCollapseColor !important;
    }
  }
  header .navbar .nav > li.navbar-text {
    padding: 10px;
    line-height: 20px;
    color: $navCollapseColor !important;
  }
  .nav-collapse .navbar-form, .nav-collapse .navbar-search {
    margin: 0;
    padding: 10px;
    border-bottom: 0;
  }
  .timeline-wrapper {
    overflow-x: scroll;
  }

  // Responsive table behvavior inspired by
  // https://css-tricks.com/responsive-data-tables/
  .js--responsive_table {

    table, thead, tbody, th, td, tr {
      display: block;
    }

    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tr { border: 1px solid #ccc; }

    td {
      border: none;
      border-bottom: 1px solid #eee;
      position: relative;
      padding-left: 35%;

      .responsive-header {
        display: block;
        position: absolute;
        top: 6px;
        left: 6px;
        width: 30%;
        padding-right: 10px;
        white-space: nowrap;
        font-weight: bold;
      }

    }

    th.currency, td.currency {
      text-align: left;
    }

  }
}

@media (min-width: 980px) {
  .visible-with-nav {
    display: inherit !important;
  }
  .hidden-with-nav {
    display: none !important;
  }
}

